Added FHE matrix operations

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -35,3 +35,9 @@ add_subdirectory(hello)
 add_subdirectory(hello-native)
 add_subdirectory(attestation)
 add_subdirectory(tests)
+add_subdirectory(sealdemoNonEnclave)
+add_subdirectory(sealMatrixMulEnclave)
+add_subdirectory(sealMatrixAddEnclave)
+add_subdirectory(sealPointWiseEnclave)
+add_subdirectory(sealMatrixRotationEnclave)
+
